--- a/mapfiddle.html
+++ b/mapfiddle.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
         <script src="lib/angular/angular.js"></script>
         <script src="js/ui-bootstrap-tpls-0.10.0.js"></script>
+        <script src="js/linq.js"></script>
     </head>
 
     <body>
@@ -84,6 +85,7 @@
             </div>
         </div>
         <script type="text/javascript" src="controllers/mapfiddle.js"></script>
+        <script type="text/javascript" src="services/output.js"></script>
     </body>
 
 </html>
