--- a/maptest.html
+++ b/maptest.html
@@ -11,7 +11,13 @@
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
     <script>var map;
     function initialize() {
-        var mapOptions = {zoom: 8, center: new google.maps.LatLng(-34.397, 150.644), };
+        var mapOptions = {
+            zoom: 13,
+            center: new google.maps.LatLng(42.94674355314861, -85.6587000427246),
+            panControl: false,
+            zoomControl: false,
+            mapTypeControl: false
+        };
         map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
     }
     google.maps.event.addDomListener(window, "load", initialize);</script>
