--- a/mapfiddle.html
+++ b/mapfiddle.html
@@ -76,7 +76,7 @@
                 <!-- /Map Options -->
                 <!-- HTML & Map -->
                 <div>
-                    <div class="row-fluid" style="height:820px;">
+                    <div class="row-fluid well-map map-container">
                         <div id="map-canvas" class="span8" style="height:100%;"></div>
                     </div>
                 </div>
