--- a/mapfiddle.html
+++ b/mapfiddle.html
@@ -52,8 +52,8 @@
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li ng-repeat="choice in mapTypeItems">
-                            <a ng-click="toggleMapType()">{{ choice }}</a>
+                        <li ng-repeat="choice in mapTypes">
+                            <a ng-click="toggleMapType()">{{ choice.label }}</a>
                         </li>
                     </ul>
                 </div>
@@ -77,10 +77,10 @@
                 </div>
                 <!-- /Map Options -->
                 <!-- HTML & Map -->
-                <div >
+                <div>
                     <div class="row-fluid well-map map-container">
                         <div id="google-map-canvas" class="span8"></div>
-                        <div id="leaflet-map-canvas" class="span8" style="display:none;"></div>
+                        <!--<div id="leaflet-map-canvas" class="span8"></div>-->
                     </div>
                 </div>
                 <!-- /HTML & Map -->
@@ -89,7 +89,8 @@
         <script type="text/javascript" src="controllers/mapfiddle.js"></script>
         <script type="text/javascript" src="controllers/angularui.js"></script>
         <script type="text/javascript" src="services/output.js"></script>
-        <script type="text/javascript" src="services/display.js"></script>
+        <script type="text/javascript" src="services/options.js"></script>
+        <script type="text/javascript" src="services/mapchoice.js"></script>
     </body>
 
 </html>
