--- a/maptest.html
+++ b/maptest.html
@@ -11,7 +11,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
     <script>var map;
     function initialize() {
-        var mapOptions = {zoom: 10, center: new google.maps.LatLng(-34.09958576185429, 149.82071203613282), panControl: false, mapTypeControl: false};
+        var mapOptions = {zoom: 4, center: new google.maps.LatLng(-34.397, 150.644), panControl: false, streetViewControl: false};
         map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
     }
     google.maps.event.addDomListener(window, "load", initialize);</script>
