--- a/mapfiddle.html
+++ b/mapfiddle.html
@@ -9,13 +9,11 @@
         <link rel="stylesheet" href="css/fa/css/font-awesome.css">
         <link rel="stylesheet" href="css/mapfiddle.css">
 
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
-
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
-        <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+        <!--<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>-->
 
-        <script src="lib/angular/angular.js"></script>
-        <script src="js/ui-bootstrap-tpls-0.10.0.js"></script>
+        <script src="js/angular.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         <script src="js/linq.js"></script>
         <script src="js/utility.js"></script>
         </head>
