--- a/maptest.html
+++ b/maptest.html
@@ -11,12 +11,12 @@
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
     <script>var map;
     function initialize() {
-        var mapOptions = {zoom: 4, center: new google.maps.LatLng(-34.397, 150.644), panControl: false, streetViewControl: false};
+        var mapOptions = {zoom: 6, center: new google.maps.LatLng(-32.46743356640208, 159.76717748181522), panControl: false, zoomControl: false, streetViewControl: false, mapTypeControl: false};
         map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
     }
     google.maps.event.addDomListener(window, "load", initialize);</script>
 </head>
 <body>
-<div id="map-canvas"></div>
+    <div id="map-canvas"></div>
 </body>
 </html>
