Updated code service and code-view template to output HTML + JS a little cleaner.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <!--<script type="text/javascript" src="controllers/angularui.js"></script>-->
 <!--<script type="text/javascript" src="services/output.js"></script>-->
 <script type="text/javascript" src="services/options.js"></script>
-<!--<script type="text/javascript" src="services/mapchoice.js"></script>-->
+<script type="text/javascript" src="services/code.js"></script>
 </body>
 
 </html>
