--- a/index.html
+++ b/index.html
@@ -54,35 +54,16 @@
         </div>
     </div>
     <!-- END Tabs -->
-
     <!-- Options & Map -->
     <div class="row ">
         <div class="col-sm-2" ng-controller="OptionsController as oc">
             <form role="form" class="">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-                </div>
-                <div class="form-group">
-                    <label for="example">Zoom: 18</label>
-                    <input id="example" min="0" max="20" type="range" class="add-on mapoption-range">
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox"> Check me out
-                    </label>
-                </div>
-
-                <div class="form-group" ng-repeat="option in oc.getSideBarOptionsAll()">
+                <div class="form-group" ng-repeat="option in options">
                     <div ng-if="option.inputType == 'range'" option-range="option"></div>
                     <div ng-if="option.inputType == 'checkbox'" option-checkbox="option"></div>
                     <pre>{{option}}</pre>
                 </div>
-
             </form>
-
-
-
         </div>
         <div class="col-sm-10">
             <div ng-view></div>
