Renamed controllers and services to include function in name.

--- a/index.html
+++ b/index.html
@@ -72,38 +72,23 @@
     </div>
     <!-- END Options & Map -->
 </div>
-
-<!--<script src="js/bootstrap.min.js"></script>-->
 <script src="js/angular.js"></script>
 <script src="js/angular-route.min.js"></script>
-<!--<script src="js/linq.js"></script>-->
 <script src="js/lodash.js"></script>
 <script src="js/utility.js"></script>
 <script src="js/leaflet.js"></script>
 <script src="app.js"></script>
-<script src="controllers/nav.js"></script>
-<script src="controllers/options.js"></script>
-<script src="controllers/mapview.js"></script>
-<script src="controllers/codeview.js"></script>
+<script src="controllers/navController.js"></script>
+<script src="controllers/optionsController.js"></script>
+<script src="controllers/mapViewController.js"></script>
+<script src="controllers/codeViewController.js"></script>
 <script src="directives/directives.js"></script>
-<!--<script type="text/javascript" src="controllers/mapfiddle.js"></script>-->
-<!--<script type="text/javascript" src="controllers/angularui.js"></script>-->
-<!--<script type="text/javascript" src="services/output.js"></script>-->
-<script src="services/options.js"></script>
-<script src="services/code.js"></script>
+<script src="services/optionsService.js"></script>
+<script src="services/codeService.js"></script>
 
 
-<!--Before-->
-<script src="js/prettify/run_prettify.js"></script>
-<script type="text/javascript">
-    (function() {
-        try {
-            prettyPrint();
-        } catch(e) {}
-    })();
-</script>
-<!--<script src="js/prettify/google-code-prettify.js"></script>-->
-<!--End-->
+<!--<script src="js/prettify/run_prettify.js"></script>-->
+
 </body>
 
 </html>
