--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="css/bs/bootstrap.css">
     <link rel="stylesheet" href="css/leaflet.css" />
-    <link rel="stylesheet" href="js/prettify/prettify.css" />
+    <!--<link rel="stylesheet" href="js/prettify/prettify.css" />-->
 
     <style>
         /* TODO replace with some JS to resize the map */
@@ -62,9 +62,10 @@
                 <div class="form-group" ng-repeat="option in options">
                     <div ng-if="option.inputType == 'range'" option-range="option"></div>
                     <div ng-if="option.inputType == 'checkbox'" option-checkbox="option"></div>
-                    <pre>{{option}}</pre>
+                    <!--<pre>{{option}}</pre>-->
                 </div>
             </form>
+            <div class="alert alert-info" role="alert">There are many more options in <a target="_blank" href="http://leafletjs.com/reference.html#map-options">Leaflet's official documentation</a>.</div>
         </div>
         <div class="col-sm-10">
             <div ng-view></div>
