--- a/maptest.html
+++ b/maptest.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head><title>Simple Map</title>
+<head>
+    <title>Simple Map</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <style>html, body, #map-canvas {
-        height: 100%;
-        margin: 0px;
-        padding: 0px
-    }</style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-    <script>var map;
-    function initialize() {
-        var mapOptions = {zoom: 6, center: new google.maps.LatLng(-32.46743356640208, 159.76717748181522), panControl: false, zoomControl: false, streetViewControl: false, mapTypeControl: false};
-        map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-    }
-    google.maps.event.addDomListener(window, "load", initialize);</script>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <style>html, body, #map { height: 100%; margin: 0; padding: 0 }</style>
+    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 </head>
 <body>
-    <div id="map-canvas"></div>
+<div id="map"></div>
+<script>
+    var map;
+    function initialize() {
+        var options = {
+            zoom: 8,
+            dragging: false,
+            touchZoom: false,
+            scrollWheelZoom: false,
+            doubleClickZoom: false,
+            center: [-34.397,150.644],
+            url: 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
+            attribution: 'Map data © OpenStreetMap contributors'
+        };
+        map = new L.Map("map", options);
+        var osm = new L.TileLayer(options.url, options);
+        map.addLayer(osm);
+    }
+    initialize();
+</script>
 </body>
 </html>
