Moved map logic to mapService service

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 <script src="controllers/mapViewController.js"></script>
 <script src="controllers/codeViewController.js"></script>
 <script src="directives/directives.js"></script>
+<script src="services/mapService.js"></script>
 <script src="services/optionsService.js"></script>
 <script src="services/codeService.js"></script>
 
