Added code highlighting for codeview

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <link rel="stylesheet" href="css/bs/bootstrap.css">
     <link rel="stylesheet" href="css/leaflet.css" />
-    <!--<link rel="stylesheet" href="js/prettify/prettify.css" />-->
-
+    <!--<link rel="stylesheet" href="css/prettify-theme-desert.css" />-->
+    <!--<link rel="stylesheet" href="css/prettify.css" />-->
     <style>
         /* TODO replace with some JS to resize the map */
         @media (min-height:570px) { /* 768 */
@@ -64,7 +64,7 @@
                     <h3 class="panel-title">Add Cool Stuff</h3>
                 </div>
                 <div class="panel-body">
-                    This is where cool stuff will go...
+                    Add Markers, circles, polygons, popups and events....soon.
                 </div>
             </div>
         </div>
@@ -98,9 +98,8 @@
 <script src="services/optionsService.js"></script>
 <script src="services/codeService.js"></script>
 
-
-<!--<script src="js/prettify/run_prettify.js"></script>-->
-
+<script src="js/prettify/run_prettify.js"></script>
+<script src="js/prettify/prettify.js"></script>
 </body>
 
 </html>
