Moved zoomControl position so it is not hidden behind the navbar

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
         .appfront {
             z-index: 1001;
         }
+
+        .leaflet-top .leaflet-control {
+            margin-top: 95px;
+        }
+        .leaflet-left .leaflet-control {
+            margin-left: 180px;
+        }
     </style>
 </head>
 
